fix overflow url

--- a/src/components/Dapp/index.css
+++ b/src/components/Dapp/index.css
@@ -78,6 +78,7 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    display: block;
 }
 
 
